--- a/env.example
+++ b/env.example
@@ -1,3 +1,12 @@
 JWT_SECRET=your-super-secret-jwt-key-here
 NODE_ENV=development
 PORT=3000
+
+# PostgreSQL Database Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/notes_app
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=notes_app
+DB_USER=username
+DB_PASSWORD=password
+DB_SSL=false
