--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,8 @@
   ],
   "env": {
     "JWT_SECRET": "@jwt_secret",
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "DATABASE_URL": "@database_url",
+    "DB_SSL": "true"
   }
 }
